# TechToolKit-rust

./: .gitignore  AGENTS.md  Cargo.toml  ROADMAP.md  build.rs
src/: cli.rs  main.rs
src/backend/: downloader.rs  mod.rs
src/core/: asset_mgr.rs  mod.rs  models.rs
src/ui/: mod.rs  tiles.rs
src/windows_utils/: mod.rs  monitor.rs
