[package]
name = "tech_toolkit"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
build = "build.rs"

[[bin]]
name = "TechToolKit"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
eframe = "0.34.1"
egui_extras = "0.34.1"
egui_plot = "0.35.0"
quick-xml = "0.39.2"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.52.1", features = ["full"] }
zip = "8.6.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"
winreg = "0.56.0"

[build-dependencies]
embed-resource = "3.0.9"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
